# a-share-tradingagents-cn

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_auto_paper_trader.py  run_user_question.py  step01_akshare_cn.py  step02_technical_indicators.py  step03_market_snapshot.py  step04_market_report_prompt.py  step05_market_report_mock_llm.py  step06_pipeline_demo.py  step07_real_akshare_pipeline.py  step08_llm_client.py  step09_market_agent.py  step10_real_market_agent_pipeline.py  step11_stock_news.py  step12_news_event_extractor.py  step13_news_agent.py  step14_research_summary_agent.py  step15_risk_control_agent.py  step16_trader_agent.py  step17_agent_state.py  step18_stateful_workflow.py  step19_realtime_quote.py  step20_realtime_stateful_workflow.py  step21_realtime_summary_agent.py  step22_realtime_risk_control_agent.py  step23_realtime_trader_agent.py  step24_agent_router.py  step25_router_driven_workflow.py  step26_router_real_workflow.py  step27_langgraph_real_workflow.py  step27_langgraph_single_file_teaching.py  step28_langgraph_agent_prompt_flow.py  step29_structured_output_teaching.py  step30_fallback_route_teaching.py  step31_tool_calling_teaching.py  step32_toolnode_teaching.py  (+15 more)
tests/: test_a_share_trading_rules.py  test_analyst_tool_calling.py  test_announcements.py  test_auto_paper_trader.py  test_benchmark_and_reflection.py  test_cli_user_question.py  test_data_quality.py  test_debate_structured.py  test_graph_setup_and_propagation.py  test_langgraph_toolnode_workflow.py  test_llm_factory.py  test_market_overview.py  (+23 more)
(+87 files in other folders)
